Start - Account Exec - My Sales screen: completed basic layout and outlet/ action bindings. How can I Improve screen: as discussed added single web view covering whole layout. Performed code refactoring for PagerView and PaginationView.

--- a/T365CalculatorScreens/Base.lproj/CommonComponents.storyboard
+++ b/T365CalculatorScreens/Base.lproj/CommonComponents.storyboard
@@ -132,6 +132,40 @@
             </objects>
             <point key="canvasLocation" x="162" y="1669"/>
         </scene>
+        <!--Pagination Container Controller-->
+        <scene sceneID="yxb-0N-45z">
+            <objects>
+                <viewController storyboardIdentifier="PaginationContainerController" id="VTF-n4-i9R" customClass="PaginationContainerController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="beK-bD-tCy"/>
+                        <viewControllerLayoutGuide type="bottom" id="692-1P-b7e"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OJo-b2-ERS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Pagination Container" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTI-oq-6Ut">
+                                <rect key="frame" x="221" y="252" width="159" height="94"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="JCF-Y0-VFl"/>
+                                    <constraint firstAttribute="height" constant="94" id="zCH-EN-vE2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wTI-oq-6Ut" firstAttribute="centerY" secondItem="OJo-b2-ERS" secondAttribute="centerY" id="FHm-rE-ind"/>
+                            <constraint firstItem="wTI-oq-6Ut" firstAttribute="centerX" secondItem="OJo-b2-ERS" secondAttribute="centerX" id="fX4-Hf-TbP"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ttx-VG-frd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1615" y="2164.5"/>
+        </scene>
         <!--Action Sheet Controller-->
         <scene sceneID="SwF-rh-hR3">
             <objects>
